[package]
name = "nucleoguide"
version = "0.1.0"
authors = ["Harry Allsopp <harryallsopp8@gmail.com>"]
edition = "2021"
description = "Guide RNA design tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
clap = { version = "4.1.4", features = ["derive"] }
regex = "1.7.1"
unicode-segmentation = "1.10.0"

